# imageRetrieval

./: CMakeLists.txt
include/: akmeans.hpp  bow_vector.hpp  database.hpp  distance.hpp  kit.hpp
src/: akmeans.cpp  bow_vector.cpp  kit.cpp
test/: test.cpp
